--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -28,10 +28,10 @@
                 </div>
 
                 <div fxFlex>
-                    <button *ngIf="isDeleting" (click)="buttonOption('dismiss')" class="refreshbutton" mat-mini-fab
+                    <!-- <button *ngIf="isDeleting" (click)="buttonOption('dismiss')" class="refreshbutton" mat-mini-fab
                         style="font-size: 8px;" color="success" aria-label="icon">
                         <mat-icon>cancel</mat-icon>
-                    </button>
+                    </button> -->
                     <button *ngIf="!isDeleting" (click)="buttonOption('cancel')" class="refreshbutton" mat-mini-fab
                         style="color: white;background-color: red;" color="success" aria-label="icon">
                         <mat-icon>cancel</mat-icon>
