--- a/src/app/fcastillo/fcastillo.component.scss
+++ b/src/app/fcastillo/fcastillo.component.scss
@@ -22,7 +22,7 @@
 
 .fc {
   margin-top: -35px;
-  font-size: 50px;
+  font-size: 30px;
   color: white;
   font-family: cherolina;
   background-color: rgba(0, 0, 0, 0.5);
@@ -38,6 +38,7 @@
   font-family: caviar;
   font-size: 30px;
   margin: 24px 0 35px 30px;
+  line-height: 30px;
 }
 
 .story {
@@ -78,4 +79,28 @@
     font-size: 24px;
     line-height: 41px;
   }
+}
+
+.mat-slide-toggle-thumb {
+  width: 10px !important;
+  height: 10px !important;
+  transform: translate(50%, 50%);
+}
+
+.mat-slide-toggle-bar {
+background-color: #000;
+border-radius: 15px !important;
+height: 16px !important;
+}
+
+.mat-slide-toggle-thumb-container {
+top: -2px !important;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+background-color: #000;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+background-color: #fff;
 }
