new rationale for the voting app

--- a/src/app/fcastillo/oldcastillo.html
+++ b/src/app/fcastillo/oldcastillo.html
@@ -195,7 +195,7 @@
                             <img mat-card-image src="assets/img/fcast/singlewhite.png" style="width: 270px;"
                                 alt="Photo of a Shiba Inu">
                             <mat-card-content>
-                                <div id="paypal-button-container2">
+                                <div id="paypal-button-container">
                                 </div>
                             </mat-card-content>
                             <mat-card-actions>
