--- a/src/app/fcastillo/fcastillo.component.html
+++ b/src/app/fcastillo/fcastillo.component.html
@@ -16,7 +16,7 @@
 
         <div class="row">
             <video  #videoPlayer width="100%" height="100%" autoplay loop [muted]="isMute" playsinline>
-                <source src="./assets/img/payment/Secuencia 01_2.mp4" type="video/mp4">
+                <source src="./assets/img/payment/Secuencia 01_2.gif" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/3hOeI0f-3BM?rel=0;controls=0;&autoplay=1&mute=1&loop=1&playlist=PZ4MgNmDbaI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
