wysiwyg editor confirguration heigh

--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -203,3 +203,9 @@
     width: 254px;
   background-color: white;
 }
+
+
+:host ::ng-deep .ck-editor__editable_inline {
+  max-height: 400px;
+  min-height: 400px;
+}
