--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div>Key Words and Concepts</div> 
-                <ckeditor [editor]="Editor" [data]="dataEditor"
+                <ckeditor [editor]="Editor" [data]="dataEditor" style="max-height: 400px;"
                  [(ngModel)]="model.editorData" class="ckeditorcev" ></ckeditor>
             </div>
             <div class="col-md-1">  <button (click)="buttonOption('savePost')" class="refreshbutton" mat-button style="font-size: 8px;"
@@ -57,8 +57,8 @@
             <div class="col-md-5" >
                 <div>Name Candidates</div>
                 <mat-form-field style="width: 550px;">                    
-                    <textarea matInput  cdkTextareaAutosize  cdkAutosizeMinRows="20"
-                    cdkAutosizeMaxRows="20" style="max-height: 400px;" appearance="outline" formControlName="suma"></textarea>
+                    <textarea matInput  cdkTextareaAutosize  cdkAutosizeMinRows="23"
+                    cdkAutosizeMaxRows="23" style="max-height: 400px;border-top:solid black 1px;border-left:solid black 1px;border-right:solid black 1px" appearance="outline" formControlName="suma"></textarea>
                   </mat-form-field>
                 <!-- <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.namesData" style="max-height: 400px;"></ckeditor> -->
             </div>
@@ -66,7 +66,8 @@
     </div>
 
     <div fxLayoutAlign="end end">
-        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-fab style="color: white;background-color: green;padding: 4px;outline: none;"
+        <button (click)="buttonOption('savePost')" class="refreshbutton" mat-fab style="color: white;position: fixed;
+        bottom: 100px;background-color: green;padding: 4px;outline: none;"
             color="success" aria-label="icon">
             <mat-icon>check</mat-icon>
         </button>
